[project]
name = "PyBackport"
authors = [
    { name = "Jaime Gonzalez Gomez", email = "jim.gomez.dnn@gmail.com" },
]
description = "Python package to backport classes from new python releases."
urls = { Source = "https://github.com/Jtachan/PyBackport.git" }
dependencies = [
    # The idea is to keep this package without dependencies
]
requires-python = ">=3.8"
license = { text = "MIT license" }
dynamic = ["readme", "version"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "py_back._version.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
src_paths = ["src", "unittests"]
